--- a/index.html
+++ b/index.html
@@ -10,45 +10,64 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet"></head>
 <body>
   <!-- Navbar --> 
-  <nav class="container">
-    <nav class="navbar navbar-light ">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-     </div>
+  <input id="toggle" type="checkbox"></input>
+
+<label for="toggle" class="hamburger container-fluid px-4">
+  <div class="top-bun"></div>
+  <div class="meat"></div>
+  <div class="bottom-bun"></div>
+</label>
+
+<div class="nav">
+  <div class="nav-wrapper">
+    <nav>
+      <a href="#">HOME</a><br>
+      <a href="#">ABOUT</a><br>
+      <a href="#">WORK</a><br>
+      <a href="#">SERVICES</a>
     </nav>
-    <div class="collapse" id="navbarToggleExternalContent">
-      <div class="bg-dark p-4">
-        <h5 class="text-white h4">Collapsed content</h5>
-        <span class="text-muted">Toggleable via the navbar brand.</span>
-      </div>
-    </div>
-  </nav>
+  </div>
+</div>
 
   <!-- Home section --> 
-  <div id="home">
-    <div class="container my-5">
-      <h2>Listen! music of the future past</h2>
-      <h1 style="font-weight: 700; color: #ec5242;">SOUND OF NOSTALGIA </br> RETROWAVE GATHER 2023</h1>
+  <div id="home" class="container-fluid pt-5">
+    <div class="container my-5 pt-5">
+      <h2>"Listen! music of the future past"</h2>
+      <h1>SOUND OF NOSTALGIA </br> RETROWAVE GATHER 2023</h1>
     </div>
 
-    <div class="container my-3 p-3 border">
-      <p>Welcome to the annual gathering of synth enthusiasts! Join us for a celebration of the past, present, and future of electronic music as we explore the latest gear, techniques, and sounds.</p>
+    <div class="container my-3 p-3 home-p">
+      <p class="m-0">Welcome to the annual gathering of synth enthusiasts! Join us for a celebration of the past, present, and future of electronic music as we explore the latest gear, techniques, and sounds.</p>
     </div>
 
     <div class="container">
-      <h2>2023.10.13(FRI) ~ 14(SAT)</h2>
-      <h3>@ Cyberdelia Complex, Berlin, Germany.</h3>
+      <h3>2023.10.13(FRI) ~ 14(SAT)</h2>
+      <h4>@ Cyberdelia Complex, Berlin, Germany.</h3>
     </div>
   </div>
 
   <!-- Main program --> 
-  
+  <div class="container-fluid" id="main-program">
+    <div class="program-title">
+      <h2>Main Program</h2>
+      <div class="limit-border-bottom"></div>
+    </div>
+
+    <div class="program-cards px-3">
+      <div class="program-item">
+        <img src="./images/icons/speaker-icon-small.png">
+        <h3>Lecture</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+      </div>
+    </div>
+
+    
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
