main program cards finish

--- a/index.html
+++ b/index.html
@@ -64,6 +64,31 @@
         <h3>Lecture</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
       </div>
+
+      <div class="program-item">
+        <img src="./images/icons/listen-icon-small.png">
+        <h3>Listen</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+      </div>
+
+      <div class="program-item">
+        <img src="./images/icons/forum-icon.png">
+        <h3>Forum</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+      </div>
+
+      <div class="program-item">
+        <img src="./images/icons/create.png">
+        <h3>Create</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+      </div>
+
+      <div class="program-item">
+        <img src="./images/icons/network-icon-small.png">
+        <h3>Network</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+      </div>
+
     </div>
 
     
