main program section button add
main program finish

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div id="home" class="container-fluid pt-5">
     <div class="container my-5 pt-5">
       <h2>"Listen! music of the future past"</h2>
-      <h1>SOUND OF NOSTALGIA </br> RETROWAVE GATHER 2023</h1>
+      <h1>SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
     </div>
 
     <div class="container my-3 p-3 home-p">
@@ -53,6 +53,7 @@
 
   <!-- Main program --> 
   <div class="container-fluid" id="main-program">
+
     <div class="program-title">
       <h2>Main Program</h2>
       <div class="limit-border-bottom"></div>
@@ -88,10 +89,9 @@
         <h3>Network</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
       </div>
-
     </div>
 
-    
+    <button class="join-btn">Join Sound of Anemoia 2023</button>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
