--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- Main program --> 
   <div class="container-fluid" id="main-program">
 
-    <div class="program-title">
+    <div class="section-title">
       <h2>Main Program</h2>
       <div class="limit-border-bottom"></div>
     </div>
@@ -93,6 +93,14 @@
 
     <button class="join-btn">Join Sound of Anemoia 2023</button>
   </div>
+
+  <!--Featured speakers-->
+  <div id="featured-speakers" class="container-fluid">
+    <div class="section-title">
+      <h2>Featured speakers</h2>
+      <div class="limit-border-bottom"></div></div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
