--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
@@ -13,14 +14,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet"></head>
+
 <body>
   <!-- Navbar --> 
   <input id="toggle" type="checkbox"></input>
 
 <label for="toggle" class="hamburger container-fluid px-4">
-  <div class="top-bun"></div>
-  <div class="meat"></div>
-  <div class="bottom-bun"></div>
+  <div class="top-bun border"></div>
+  <div class="meat border"></div>
+  <div class="bottom-bun border"></div>
 </label>
 
 <div class="nav">
@@ -96,11 +98,13 @@
 
   <!--Featured speakers-->
   <div id="featured-speakers" class="container-fluid">
+
     <div class="section-title">
       <h2>Featured speakers</h2>
       <div class="limit-border-bottom"></div></div>
-  </div>
 
+  </div>
+  <script src="speaker-generator.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
