--- a/index.html
+++ b/index.html
@@ -98,12 +98,28 @@
 
   <!--Featured speakers-->
   <div id="featured-speakers" class="container-fluid">
-
     <div class="section-title">
       <h2>Featured speakers</h2>
       <div class="limit-border-bottom"></div></div>
-
   </div>
+
+  <!--About-->
+  <div id="about" class="container-fluid pt-5">
+    <div class="container my-5 pt-5" style="text-align: center;">
+      <h3 class="p-4">"Listen! music of the future past"</h2>
+      <h2 style="font-weight: 900; color: #ec5242;">SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
+    </div>
+
+    <div class="container my-3 p-3 home-p">
+      <p class="m-0">Welcome to the annual gathering of synth enthusiasts! Join us for a celebration of the past, present, and future of electronic music as we explore the latest gear, techniques, and sounds.</p>
+    </div>
+
+    <div class="container">
+      <h3>2023.10.13(FRI) ~ 14(SAT)</h2>
+      <h4>@ Cyberdelia Complex, Berlin, Germany.</h3>
+    </div>
+  </div>
+
   <script src="speaker-generator.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
