--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet"></head>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 <body>
   <!-- Navbar --> 
   <input id="toggle" type="checkbox"></input>
@@ -97,12 +98,15 @@
   </div>
 
   <!--Featured speakers-->
-  <div id="featured-speakers" class="container-fluid">
-    <div class="section-title">
-      <h2>Featured speakers</h2>
-      <div class="limit-border-bottom"></div></div>
+  <div class="container">
+    <div id="featured-speakers">
+      <div class="section-title">
+        <h2>Featured speakers</h2>
+        <div class="limit-border-bottom"></div>
+      </div>
+    </div>
+    <button id="see-more-button">MORE<img id="more-arrow" src="./images/icons/more-arrow-icon.png" alt="click for more"></button>
   </div>
-
   <!--About-->
   <div id="about" class="container-fluid pt-5">
     <div class="container my-5 pt-5" style="text-align: center;">
@@ -121,6 +125,7 @@
   </div>
 
   <script src="speaker-generator.js"></script>
+  <script src="see-more-button.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
