see more button working
when click seeMore function toggles hiding class

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
 
     <div class="container my-3 p-3 home-p">
-      <p class="m-0">Welcome to the annual gathering of synth enthusiasts! Join us for a celebration of the past, present, and future of electronic music as we explore the latest gear, techniques, and sounds.</p>
+      <p class="m-0">The annual gathering of synth music enthusiasts is returning for its fourth year, featuring an exciting lineup of speakers, live performances, a music gallery, project crafting workshops, and networking opportunities. Join us for a weekend of exploring the latest gear, techniques, and sounds in the world of electronic music. Don't miss out on this incredible opportunity to connect with like-minded individuals and take your passion for synth music to the next level.</p>
     </div>
 
     <div class="container">
