add bootstrap classes to about title and see more button

--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
         <div class="limit-border-bottom"></div>
       </div>
     </div>
-    <button id="see-more-button">MORE<img id="more-arrow" src="./images/icons/more-arrow-icon.png" alt="click for more"></button>
+    <button id="see-more-button" class="border">MORE<img id="more-arrow" src="./images/icons/more-arrow-icon.png" alt="click for more"></button>
   </div>
   <!--About-->
   <div id="about" class="container-fluid pt-5">
-    <div class="container my-5 pt-5" style="text-align: center;">
+    <div class="container my-5 pt-5" style="text-align: center; color: #ec5242;">
       <h3 class="p-4">"Listen! music of the future past"</h2>
-      <h2 style="font-weight: 900; color: #ec5242;">SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
+      <h2 style="font-weight: 900;">SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
     </div>
 
-    <div class="container my-3 p-3 home-p">
+    <div class="container my-3 p-3 home-p bg-light border">
       <p class="m-0">The annual gathering of synth music enthusiasts is returning for its fourth year, featuring an exciting lineup of speakers, live performances, a music gallery, project crafting workshops, and networking opportunities. Join us for a weekend of exploring the latest gear, techniques, and sounds in the world of electronic music. Don't miss out on this incredible opportunity to connect with like-minded individuals and take your passion for synth music to the next level.</p>
     </div>
 
