logo section add

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
   <!-- Navbar --> 
   <input id="toggle" type="checkbox"></input>
 
-<label for="toggle" class="hamburger container-fluid px-4">
-  <div class="top-bun border"></div>
-  <div class="meat border"></div>
-  <div class="bottom-bun border"></div>
-</label>
+  <label for="toggle" class="hamburger container-fluid px-4">
+    <div class="top-bun border"></div>
+    <div class="meat border"></div>
+    <div class="bottom-bun border"></div>
+  </label>
 
-<div class="nav">
-  <div class="nav-wrapper">
-    <nav>
-      <a href="#">HOME</a><br>
-      <a href="#">ABOUT</a><br>
-      <a href="#">WORK</a><br>
-      <a href="#">SERVICES</a>
-    </nav>
+  <div class="nav">
+    <div class="nav-wrapper">
+      <nav>
+        <a href="#">HOME</a><br>
+        <a href="#">ABOUT</a><br>
+        <a href="#">WORK</a><br>
+        <a href="#">SERVICES</a>
+      </nav>
+    </div>
   </div>
-</div>
 
   <!-- Home section --> 
   <div id="home" class="container-fluid pt-5">
@@ -107,9 +107,10 @@
     </div>
     <button id="see-more-button" class="border">MORE<img id="more-arrow" src="./images/icons/more-arrow-icon.png" alt="click for more"></button>
   </div>
+
   <!--About-->
   <div id="about" class="container-fluid pt-5">
-    <div class="container my-5 pt-5" style="text-align: center; color: #ec5242;">
+    <div class="container my-5 pt-5" style="color: #ec5242;">
       <h3 class="p-4">"Listen! music of the future past"</h2>
       <h2 style="font-weight: 900;">SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
     </div>
@@ -119,10 +120,24 @@
     </div>
 
     <div class="container">
-      <h3>2023.10.13(FRI) ~ 14(SAT)</h2>
-      <h4>@ Cyberdelia Complex, Berlin, Germany.</h3>
+      <p id="contact-us">Please contact us per Email for any further questions about Sound of Anemoia 2023!</p>
+      <p id="about-email">synthsound2023@gmail.com</p>
     </div>
   </div>
+  <!--Logo-->
+  <div class="container-fluid">
+    <div class="section-title">
+      <h2>Sound of Anemoia</br> Retrowave Gather 2023 Logo</h2>
+      <div class="limit-border-bottom-big"></div>
+    </div>
+    <div class="container pt-5">
+      <p>The logo of SoA Retrowave Gather 2023 was decided through the logo competition from 8, June to 7, July.</p>
+      <img src="./images/people/joe-cool.jpg">
+    </div>
+  </div>
+
+  <!--Past gathers-->
+  
 
   <script src="speaker-generator.js"></script>
   <script src="see-more-button.js"></script>
