--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   </div>
 
   <!-- Home section --> 
-  <div id="home" class="container-fluid pt-5">
-    <div class="container my-5 pt-5">
+  <div id="home" class="container-fluid py-5">
+    <div class="container my-5">
       <h2>"Listen! music of the future past"</h2>
       <h1>SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
     </div>
@@ -55,7 +55,7 @@
   </div>
 
   <!-- Main program --> 
-  <div class="container-fluid" id="main-program">
+  <div class="container-fluid py-5" id="main-program">
 
     <div class="section-title">
       <h2>Main Program</h2>
@@ -98,19 +98,20 @@
   </div>
 
   <!--Featured speakers-->
-  <div class="container">
+  <div class="container py-5">
     <div id="featured-speakers">
       <div class="section-title">
         <h2>Featured speakers</h2>
-        <div class="limit-border-bottom"></div>
+        <div class="limit-border-bottom">
+        </div>
       </div>
     </div>
-    <button id="see-more-button" class="border">MORE<img id="more-arrow" src="./images/icons/more-arrow-icon.png" alt="click for more"></button>
+    <button id="see-more-button" class="border mt-5">MORE<img id="more-arrow" src="./images/icons/more-arrow-icon.png" alt="click for more"></button>
   </div>
 
   <!--About-->
-  <div id="about" class="container-fluid pt-5">
-    <div class="container my-5 pt-5" style="color: #ec5242;">
+  <div id="about" class="container-fluid py-5">
+    <div class="container my-5" style="color: #ec5242;">
       <h3 class="p-4">"Listen! music of the future past"</h2>
       <h2 style="font-weight: 900;">SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
     </div>
@@ -125,7 +126,7 @@
     </div>
   </div>
   <!--Logo-->
-  <div class="container-fluid">
+  <div class="container-fluid my-5 pb-5 border-bottom">
     <div class="section-title">
       <h2>Sound of Anemoia</br> Retrowave Gather 2023 Logo</h2>
       <div class="limit-border-bottom-big"></div>
@@ -137,7 +138,31 @@
   </div>
 
   <!--Past gathers-->
-  
+  <div id="past-gathers" class="container mt-5">
+    <div class="section-title">
+      <h2>See the past SoA Retrowave Gathers</h2>
+      <div class="limit-border-bottom"></div>
+    </div>
+    <div class="my-5">
+      <p>Take a look at the last two SoA Retrowave Gathers which took place in Buenos Aires and in Warsaw.</p>
+      <img src="./images/people/joe-cool.jpg">
+      <img src="./images/people/joe-cool.jpg">
+    </div>
+  </div>
+
+  <!--Partners-->
+  <div class="container-fluid py-5">
+    <div class="section-title">
+      <h2>Partner</h2>
+      <div class="limit-border-bottom"></div>
+    </div>
+  </div>
+
+  <!--Footer-->
+  <footer class="my-5">
+    <img src="./images/people/joe-cool.jpg">
+      <p>2023 Sound of Anemoia Germany.</br>Some rights reserved.</p>
+  </footer>
 
   <script src="speaker-generator.js"></script>
   <script src="see-more-button.js"></script>
