--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
   </div>
   <!--Logo-->
-  <div class="container-fluid my-5 pb-5 border-bottom">
+  <div class="container-fluid my-5 pb-5 border-bottom" id="logo">
     <div class="section-title">
       <h2>Sound of Anemoia</br> Retrowave Gather 2023 Logo</h2>
       <div class="limit-border-bottom-big"></div>
@@ -143,7 +143,7 @@
       <h2>See the past SoA Retrowave Gathers</h2>
       <div class="limit-border-bottom"></div>
     </div>
-    <div class="my-5">
+    <div class="my-5" id="gather-images">
       <p>Take a look at the last two SoA Retrowave Gathers which took place in Buenos Aires and in Warsaw.</p>
       <img src="./images/people/joe-cool.jpg">
       <img src="./images/people/joe-cool.jpg">
@@ -151,7 +151,7 @@
   </div>
 
   <!--Partners-->
-  <div class="container-fluid py-5">
+  <div class="container-fluid py-5" id="partners">
     <div class="section-title">
       <h2>Partner</h2>
       <div class="limit-border-bottom"></div>
@@ -159,7 +159,7 @@
   </div>
 
   <!--Footer-->
-  <footer class="my-5">
+  <footer class="my-5 container">
     <img src="./images/people/joe-cool.jpg">
       <p>2023 Sound of Anemoia Germany.</br>Some rights reserved.</p>
   </footer>
