see more remove margin

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
       </div>
     </div>
-    <button id="see-more-button" class="border mt-5">MORE<img id="more-arrow" src="./images/icons/more-arrow-icon.png" alt="click for more"></button>
+    <button id="see-more-button" class="border">MORE<img id="more-arrow" src="./images/icons/more-arrow-icon.png" alt="click for more"></button>
   </div>
 
   <!--About-->
