navbar href add

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <div class="nav">
     <div class="nav-wrapper">
       <nav>
-        <a href="#">HOME</a><br>
-        <a href="#">ABOUT</a><br>
+        <a href="#home">HOME</a><br>
+        <a href="#main-program">PROGRAM</a><br>
         <a href="#">WORK</a><br>
         <a href="#">SERVICES</a>
       </nav>
