--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
     </div>
   </div>
 
+  <div class="flex-navbar">
+    <a class="navbar-brand" href="#home">
+      <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+    </a>
+    <div class="flex-menu">
+      <a href="#">somehing</a>
+      <a href="#">somehing</a>
+      <a href="#">somehing</a>
+      <a href="#">somehing</a>
+    </div>
+  </div>
   <!-- Home section --> 
   <div id="home" class="container-fluid py-5">
     <div class="container my-5">
