--- a/index.html
+++ b/index.html
@@ -31,26 +31,29 @@
       <nav>
         <a href="#home">HOME</a><br>
         <a href="#main-program">PROGRAM</a><br>
-        <a href="#">WORK</a><br>
-        <a href="#">SERVICES</a>
+        <a href="#featured-speakers">SPEAKERS</a><br>
+        <a href="#join">JOIN</a>
       </nav>
     </div>
   </div>
 
-  <div class="flex-navbar">
-    <a class="navbar-brand" href="#home">
-      <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+  <div class="flex-navbar container">
+    <a class="navbar-brand col-" href="#home">
+      <img src="./images/Logo/small-logo.png" height="60px" alt="">
     </a>
-    <div class="flex-menu">
-      <a href="#">somehing</a>
-      <a href="#">somehing</a>
-      <a href="#">somehing</a>
-      <a href="#">somehing</a>
+    <div class="menu-buttons">
+      <div class="flex-menu">
+        <a href="#main-program">Program</a>
+        <a href="#featured-speakers">Speakers</a>
+        <a href="#join">Join</a>
+        <a href="#">somehing</a>
+      </div>
+    <button type= "button" class="btn btn-light border-danger rounded-0">Join SoA</button>
     </div>
   </div>
   <!-- Home section --> 
   <div id="home" class="container-fluid py-5">
-    <div class="container my-5">
+    <div class="container my-5 ">
       <h2>"Listen! music of the future past"</h2>
       <h1>SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
     </div>
