navbar href change

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
   <div class="flex-navbar container">
     <a class="navbar-brand col-" href="#home">
-      <img src="./images/Logo/small-logo.png" height="60px" alt="">
+      <img src="./images/Logo/small-logo.png" height="60px" alt="our logo / home">
     </a>
     <div class="menu-buttons">
       <div class="flex-menu">
         <a href="#main-program">Program</a>
-        <a href="#featured-speakers">Speakers</a>
         <a href="#join">Join</a>
-        <a href="#">somehing</a>
+        <a href="#featured-speakers">Speakers</a>
+        <a href="#about">About</a>
       </div>
     <button type= "button" class="btn btn-light border-danger rounded-0">Join SoA</button>
     </div>
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <button class="join-btn">Join Sound of Anemoia 2023</button>
+    <button id="join" class="join-btn">Join Sound of Anemoia 2023</button>
   </div>
 
   <!--Featured speakers-->
