program item background add

--- a/index.html
+++ b/index.html
@@ -80,35 +80,36 @@
       <div class="program-item">
         <img src="./images/icons/speaker-icon-small.png">
         <h3>Lecture</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+        <p>Explore the latest trends and techniques in synth music production with our lineup of expert speakers.</p>
       </div>
 
       <div class="program-item">
         <img src="./images/icons/listen-icon-small.png">
         <h3>Listen</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+        <p>Immerse yourself in the world of electronic music with our cutting-edge sound gallery.</p>
       </div>
 
       <div class="program-item">
         <img src="./images/icons/forum-icon.png">
         <h3>Forum</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+        <p>Share your ideas and connect with fellow enthusiasts in our open forum.</p>
       </div>
 
       <div class="program-item">
         <img src="./images/icons/create.png">
         <h3>Create</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+        <p>Get hands-on with the latest hardware and software and bring your synth music visions to life.</p>
       </div>
 
       <div class="program-item">
         <img src="./images/icons/network-icon-small.png">
         <h3>Network</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, reprehenderit deleniti impedit et optio atque. Tempore, eius repudiandae. Cumque, ab. Sint de</p>
+        <p> Meet and collaborate with fellow synth music lovers from around the globe.</p>
       </div>
     </div>
 
     <button id="join" class="join-btn">Join Sound of Anemoia 2023</button>
+    <a href="#" id="whole-program">SEE THE WHOLE PROGRAM</a>
   </div>
 
   <!--Featured speakers-->
