program item bakcground change and footer img width adjust

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
   <!--Footer-->
   <footer class="my-5 container">
-    <img src="./images/people/joe-cool.jpg">
+    <img src="./images/Logo/small-logo.png" alt="event logo">
       <p>2023 Sound of Anemoia Germany.</br>Some rights reserved.</p>
   </footer>
 
