flex menu a element changes

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <div class="menu-buttons">
       <div class="flex-menu">
         <a href="#main-program">Program</a>
-        <a href="#join">Join</a>
         <a href="#featured-speakers">Speakers</a>
         <a href="#about">About</a>
+        <a href="#partners">Sponsors</a>
       </div>
     <button type= "button" class="btn btn-light border-danger rounded-0">Join SoA</button>
     </div>
@@ -148,7 +148,7 @@
     </div>
     <div class="container pt-5">
       <p>The logo of SoA Retrowave Gather 2023 was decided through the logo competition from 8, June to 7, July.</p>
-      <img src="./images/people/joe-cool.jpg">
+      <img src="./images/Logo/small-logo.png" class="border">
     </div>
   </div>
 
