--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="#about">About</a>
         <a href="#partners">Sponsors</a>
       </div>
-    <button type= "button" class="btn btn-light border-danger rounded-0">Join SoA</button>
+    <button type= "button" class="btn btn-light border-danger rounded-0" id="navbar-join">Join SoA</button>
     </div>
   </div>
   <!-- Home section --> 
