past gather section image add
logo section width add
h1 font size bigger

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <div class="flex-navbar container">
+  <div class="flex-navbar container-fluid px-4">
     <a class="navbar-brand col-" href="#home">
       <img src="./images/Logo/small-logo.png" height="60px" alt="our logo / home">
     </a>
@@ -53,9 +53,9 @@
   </div>
   <!-- Home section --> 
   <div id="home" class="container-fluid py-5">
-    <div class="container my-5 ">
+    <div class="container my-5 pt-5">
       <h2>"Listen! music of the future past"</h2>
-      <h1>SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
+      <h1>SOUND OF ANEMOIA </br> RETROWAVE GATHER </br>2023</h1>
     </div>
 
     <div class="container my-3 p-3 home-p">
@@ -148,7 +148,7 @@
     </div>
     <div class="container pt-5">
       <p>The logo of SoA Retrowave Gather 2023 was decided through the logo competition from 8, June to 7, July.</p>
-      <img src="./images/Logo/small-logo.png" class="border">
+      <img src="./images/Logo/small-logo.png" class="border" id="big-logo-img">
     </div>
   </div>
 
@@ -160,8 +160,8 @@
     </div>
     <div class="my-5" id="gather-images">
       <p>Take a look at the last two SoA Retrowave Gathers which took place in Buenos Aires and in Warsaw.</p>
-      <img src="./images/people/joe-cool.jpg">
-      <img src="./images/people/joe-cool.jpg">
+      <img src="./images/past-gather/past-gather-1.jpg" class="mb-3" id="gather1-image">
+      <img src="./images/past-gather/past-gather-2.jpg">
     </div>
   </div>
 
