past event section change,
now image displays as background for a element.

--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
     </div>
     <div class="my-5" id="gather-images">
       <p>Take a look at the last two SoA Retrowave Gathers which took place in Buenos Aires and in Warsaw.</p>
-      <img src="./images/past-gather/past-gather-1.jpg" class="mb-3" id="gather1-image">
-      <img src="./images/past-gather/past-gather-2.jpg">
+      <div id="event-windows">
+        <a id="event-2022" class="event-link my-3" href=''><h3>2022</h3><p>SoA gather 2022 Buenos Aires</p></a>
+        <a id="event-2021" class="event-link my-3" href=''><h3>2022</h3><p>SoA gather 2022 Buenos Aires</p></a>
+      </div>
     </div>
   </div>
 
