sponsor image add

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
     <div class="my-5" id="gather-images">
       <p>Take a look at the last two SoA Retrowave Gathers which took place in Buenos Aires and in Warsaw.</p>
       <div id="event-windows">
-        <a id="event-2022" class="event-link my-3" href=''><h3>2022</h3><p>SoA gather 2022 Buenos Aires</p></a>
-        <a id="event-2021" class="event-link my-3" href=''><h3>2022</h3><p>SoA gather 2022 Buenos Aires</p></a>
+        <a id="event-2022" class="event-link my-3" href=''><h3>2022</h3><p>SoA gather 2022 in Buenos Aires</p></a>
+        <a id="event-2021" class="event-link my-3" href=''><h3>2021</h3><p>SoA gather 2021 in Warsaw</p></a>
       </div>
     </div>
   </div>
@@ -173,6 +173,7 @@
       <h2>Partner</h2>
       <div class="limit-border-bottom"></div>
     </div>
+    <img src="./images/sponsor/sponsor-background.png" alt="sponsor-image">
   </div>
 
   <!--Footer-->
