--- a/home.html
+++ b/home.html
@@ -29,28 +29,31 @@
   <div class="nav">
     <div class="nav-wrapper">
       <nav>
-        <a href="#home">HOME</a><br>
-        <a href="#main-program">PROGRAM</a><br>
-        <a href="#featured-speakers">SPEAKERS</a><br>
-        <a href="#join">JOIN</a>
+        <a href="home.html">HOME</a><br>
+        <a href="home.html#main-program">PROGRAM</a><br>
+        <a href="home.html#featured-speakers">SPEAKERS</a><br>
+        <a href="home.html#join">JOIN</a>
+        <a href="about.html">ABOUT</a>
       </nav>
     </div>
   </div>
 
-  <div class="flex-navbar container-fluid px-4">
-    <a class="navbar-brand col-" href="#home">
-      <img src="./images/Logo/small-logo.png" height="60px" alt="our logo / home">
-    </a>
-    <div class="menu-buttons">
-      <div class="flex-menu">
-        <a href="#main-program">Program</a>
-        <a href="#featured-speakers">Speakers</a>
-        <a href="#about">About</a>
-        <a href="#partners">Sponsors</a>
+    <div class="flex-navbar container-fluid px-4">
+      <a class="navbar-brand col-" href="home.html">
+        <img src="./images/Logo/small-logo.png" height="60px" alt="our logo / home">
+      </a>
+      <div class="menu-buttons">
+        <div class="flex-menu">
+          <a href="home.html#main-program">Program</a>
+          <a href="home.html#featured-speakers">Speakers</a>
+          <a href="about.html">About</a>
+          <a href="about.html#partners">Sponsors</a>
+        </div>
+      <button type= "button" class="btn btn-light border-danger rounded-0" id="navbar-join">Join SoA</button>
       </div>
-    <button type= "button" class="btn btn-light border-danger rounded-0" id="navbar-join">Join SoA</button>
     </div>
-  </div>
+ 
+
   <!-- Home section --> 
   <div id="home" class="container-fluid py-5">
     <div class="container my-5 pt-5">
@@ -77,38 +80,38 @@
     </div>
 
     <div class="program-cards px-3">
-      <div class="program-item">
+    <article class="program-item">
         <img src="./images/icons/speaker-icon-small.png">
         <h3>Lecture</h3>
         <p>Explore the latest trends and techniques in synth music production with our lineup of expert speakers.</p>
-      </div>
+      </article>
 
-      <div class="program-item">
+    <article class="program-item">
         <img src="./images/icons/listen-icon-small.png">
         <h3>Listen</h3>
         <p>Immerse yourself in the world of electronic music with our cutting-edge sound gallery.</p>
-      </div>
+      </article>
 
-      <div class="program-item">
+    <article class="program-item">
         <img src="./images/icons/forum-icon.png">
         <h3>Forum</h3>
         <p>Share your ideas and connect with fellow enthusiasts in our open forum.</p>
-      </div>
+      </article>
 
-      <div class="program-item">
+    <article class="program-item">
         <img src="./images/icons/create.png">
         <h3>Create</h3>
         <p>Get hands-on with the latest hardware and software and bring your synth music visions to life.</p>
-      </div>
+      </article>
 
-      <div class="program-item">
+    <article class="program-item">
         <img src="./images/icons/network-icon-small.png">
         <h3>Network</h3>
         <p> Meet and collaborate with fellow synth music lovers from around the globe.</p>
-      </div>
+      </article>
     </div>
 
-    <button id="join" class="join-btn">Join Sound of Anemoia 2023</button>
+    <button id="join" class="join-btn mt-4">Join Sound of Anemoia 2023</button>
     <a href="#" id="whole-program">SEE THE WHOLE PROGRAM</a>
   </div>
 
@@ -122,58 +125,6 @@
       </div>
     </div>
     <button id="see-more-button" class="border">MORE<img id="more-arrow" src="./images/icons/more-arrow-icon.png" alt="click for more"></button>
-  </div>
-
-  <!--About-->
-  <div id="about" class="container-fluid py-5">
-    <div class="container my-5" style="color: #ec5242;">
-      <h3 class="p-4">"Listen! music of the future past"</h2>
-      <h2 style="font-weight: 900;">SOUND OF ANEMOIA </br> RETROWAVE GATHER 2023</h1>
-    </div>
-
-    <div class="container my-3 p-3 home-p bg-light border">
-      <p class="m-0">The annual gathering of synth music enthusiasts is returning for its fourth year, featuring an exciting lineup of speakers, live performances, a music gallery, project crafting workshops, and networking opportunities. Join us for a weekend of exploring the latest gear, techniques, and sounds in the world of electronic music. Don't miss out on this incredible opportunity to connect with like-minded individuals and take your passion for synth music to the next level.</p>
-    </div>
-
-    <div class="container">
-      <p id="contact-us">Please contact us per Email for any further questions about Sound of Anemoia 2023!</p>
-      <p id="about-email">synthsound2023@gmail.com</p>
-    </div>
-  </div>
-  <!--Logo-->
-  <div class="container-fluid my-5 pb-5 border-bottom" id="logo">
-    <div class="section-title">
-      <h2>Sound of Anemoia</br> Retrowave Gather 2023 Logo</h2>
-      <div class="limit-border-bottom-big"></div>
-    </div>
-    <div class="container pt-5">
-      <p>The logo of SoA Retrowave Gather 2023 was decided through the logo competition from 8, June to 7, July.</p>
-      <img src="./images/Logo/small-logo.png" class="border" id="big-logo-img">
-    </div>
-  </div>
-
-  <!--Past gathers-->
-  <div id="past-gathers" class="container mt-5">
-    <div class="section-title">
-      <h2>See the past SoA Retrowave Gathers</h2>
-      <div class="limit-border-bottom"></div>
-    </div>
-    <div class="my-5" id="gather-images">
-      <p>Take a look at the last two SoA Retrowave Gathers which took place in Buenos Aires and in Warsaw.</p>
-      <div id="event-windows">
-        <a id="event-2022" class="event-link my-3" href=''><h3>2022</h3><p>SoA gather 2022 in Buenos Aires</p></a>
-        <a id="event-2021" class="event-link my-3" href=''><h3>2021</h3><p>SoA gather 2021 in Warsaw</p></a>
-      </div>
-    </div>
-  </div>
-
-  <!--Partners-->
-  <div class="container-fluid py-5" id="partners">
-    <div class="section-title">
-      <h2>Partner</h2>
-      <div class="limit-border-bottom"></div>
-    </div>
-    <img src="./images/sponsor/sponsor-background.png" alt="sponsor-image">
   </div>
 
   <!--Footer-->
