black navbar add

--- a/about.html
+++ b/about.html
@@ -38,20 +38,30 @@
     </div>
     </div>
 
-  <div class="flex-navbar container-fluid px-4">
-    <a class="navbar-brand col-" href="home.html">
-      <img src="./images/Logo/small-logo.png" height="60px" alt="our logo / home">
-    </a>
-    <div class="menu-buttons">
-      <div class="flex-menu">
-        <a href="home.html#main-program">Program</a>
-        <a href="home.html#featured-speakers">Speakers</a>
-        <a href="about.html#about">About</a>
-        <a href="about.html#partners">Sponsors</a>
+    <div class="desktop-navbar">
+      <div class="container black-navbar">
+        <a href="" class="m-2"><img src="./images/Logo/facebook.png" alt="facebook"></a>
+        <a href="" class="m-2"><img src="./images/Logo/twitter.png" alt="twitter"></a>
+        <button class="m-2">English</button>
+        <button class="m-2">My Page</button>
+        <button class="m-2">Logout</button>
+  
       </div>
-    <button type= "button" class="btn btn-light border-danger rounded-0" id="navbar-join">Join SoA</button>
+      <div class="flex-navbar container-fluid px-4">
+        <a class="navbar-brand col-" href="home.html">
+          <img src="./images/Logo/small-logo.png" height="60px" alt="our logo / home">
+        </a>
+        <div class="menu-buttons">
+          <div class="flex-menu">
+            <a href="home.html#main-program">Program</a>
+            <a href="home.html#featured-speakers">Speakers</a>
+            <a href="about.html">About</a>
+            <a href="about.html#partners">Sponsors</a>
+          </div>
+        <button type= "button" class="btn btn-light border-danger rounded-0" id="navbar-join">Join SoA</button>
+        </div>
+      </div>
     </div>
-  </div>
 <!--About-->
   <div id="about" class="container-fluid py-5">
       <div class="container my-5" style="color: #ec5242;">
