--- a/home.html
+++ b/home.html
@@ -38,6 +38,15 @@
     </div>
   </div>
 
+  <div class="desktop-navbar">
+    <div class="container black-navbar">
+      <a href="" class="m-2"><img src="./images/Logo/facebook.png" alt="facebook"></a>
+      <a href="" class="m-2"><img src="./images/Logo/twitter.png" alt="twitter"></a>
+      <button class="m-2">English</button>
+      <button class="m-2">My Page</button>
+      <button class="m-2">Logout</button>
+
+    </div>
     <div class="flex-navbar container-fluid px-4">
       <a class="navbar-brand col-" href="home.html">
         <img src="./images/Logo/small-logo.png" height="60px" alt="our logo / home">
@@ -52,7 +61,7 @@
       <button type= "button" class="btn btn-light border-danger rounded-0" id="navbar-join">Join SoA</button>
       </div>
     </div>
- 
+  </div>
 
   <!-- Home section --> 
   <div id="home" class="container-fluid py-5">
