home change to index in home.html and about.html
name of home.html change to index

--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
   <div class="nav">
     <div class="nav-wrapper">
       <nav>
-        <a href="home.html">HOME</a><br>
-        <a href="home.html#main-program">PROGRAM</a><br>
-        <a href="home.html#featured-speakers">SPEAKERS</a><br>
-        <a href="home.html#join">JOIN</a>
+        <a href="index.html">HOME</a><br>
+        <a href="index.html#main-program">PROGRAM</a><br>
+        <a href="index.html#featured-speakers">SPEAKERS</a><br>
+        <a href="index.html#join">JOIN</a>
         <a href="about.html">ABOUT</a>
       </nav>
     </div>
@@ -48,13 +48,13 @@
   
       </div>
       <div class="flex-navbar container-fluid px-4">
-        <a class="navbar-brand col-" href="home.html">
+        <a class="navbar-brand col-" href="index.html">
           <img src="./images/Logo/small-logo.png" height="60px" alt="our logo / home">
         </a>
         <div class="menu-buttons">
           <div class="flex-menu">
-            <a href="home.html#main-program">Program</a>
-            <a href="home.html#featured-speakers">Speakers</a>
+            <a href="index.html#main-program">Program</a>
+            <a href="index.html#featured-speakers">Speakers</a>
             <a href="about.html">About</a>
             <a href="about.html#partners">Sponsors</a>
           </div>
